Address PR comments and fix grid spacing

--- a/components/centraldashboard/public/components/dashboard-view.css
+++ b/components/centraldashboard/public/components/dashboard-view.css
@@ -5,10 +5,6 @@
     grid-gap: .75em; /* 12px */
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    min-height: 0;
-    min-width: 0;
-    width: 100%;
-    max-width: 82em;
     margin: auto;
     flex: 1;
     --accent-color: #007dfc;
@@ -20,8 +16,6 @@
         border-radius: 5px;
         display: inline-block;
         font-size: 14px;
-        max-width: 400px;
-        min-width: 320px;
         position: relative;
         width: 100%;
         @apply --paper-material-elevation-1;
@@ -31,13 +25,16 @@
         font-family: "Google Sans";
         height: 62px;
         border-bottom: 1px solid var(--divider-color);
-        margin-bottom: .5em;
         @apply --layout-horizontal;
         @apply --layout-center;
     }
 }
 
-.column {grid-row: 1}
+.column {
+    grid-row: 1;
+    min-width: 320px;
+    max-width: 400px;
+}
 .column:nth-of-type(1) {grid-column: 1}
 .column:nth-of-type(2) {grid-column: 2}
 .column:nth-of-type(3) {grid-column: 3}
@@ -49,7 +46,6 @@
 paper-card {
     border-radius: 5px;
     width: 100%;
-    min-width: 23em; /* 320px */
     padding-bottom: 16px;
     font-size: 14px;
     --paper-card-header-color: #202124;
